# rustranger

./: .gitignore  Cargo.toml  PERFORMANCE.md  README.md
benches/: bench.rs
src/: app.rs  clipboard.rs  config.rs  console.rs  imgpreview.rs  lib.rs  main.rs  preview.rs  screen.rs  tab.rs  theme.rs  ui.rs  util.rs
src/fs/: directory.rs  fsobject.rs  mod.rs  sort.rs
src/image/: mod.rs
src/open/: mod.rs  opener.rs
src/ops/: copy.rs  fileops.rs  mod.rs
src/state/: bookmarks.rs  history.rs  mod.rs  tags.rs
tests/: persist_setting.rs
