[package]
name = "rustranger"
version = "0.4.1"
edition = "2021"
description = "A minimal standalone Rust file-browser TUI (a ranger-inspired rewrite)"
license = "GPL-3.0"

[lib]
name = "rustranger"
path = "src/lib.rs"

[[bin]]
name = "rustranger"
path = "src/main.rs"

[[bench]]
name = "bench"
harness = false

[dependencies]
crossterm = "0.28"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
